# Wapiti

./: .gitignore  Makefile.am  README.md  configure.ac  osx_buildconf
include/: Makefile.am  api.h  cqdb.h  options.h  quark.h  reader.h
ner2003/: REAME.md  conv2conll.py  crf.pattern  crf.sh  osx_crf.sh
ner2016/: REAME.md  conv2conll.py  crf.pattern  crf.sh  crf_eval.py  dev.txt  json2base.py  osx_crf.sh  train.txt
src/: Makefile.am  api.c  build_cqdb.c  cqdb.c  model.c  options.c  pattern.c  quark.c  reader.c  search_cqdb.c  test.txt  test_api.c  wapiti.c
